[project]
name = "agentic-invoice-dispatcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "langchain>=1.2.13",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.3",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless==4.8.1.78",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]
